fix: added text-nowrap to buttons

--- a/stylesheet/theme/buttons.less
+++ b/stylesheet/theme/buttons.less
@@ -4,6 +4,7 @@ button {
   border: none;
   background-color: transparent;
   padding: 2rem 1.5rem;
+  text-wrap: nowrap;
 
   &:has(> *) {
     height: 4.2rem;
